istio/app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: devops-project
spec:
  hosts:
    - app
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: app
            subset: v1
          weight: 0
        - destination:
            host: app
            subset: v2
          weight: 100
